brat/test/golden/error/fanin-too-many-overs.brat.golden
Error in test/golden/error/fanin-too-many-overs.brat@2:5-13
f = { [\/] }
    ^^^^^^^^

  Expected function to address all inputs, but (z :: Nat) wasn't used

